# imgpatchtools-rs

./: .gitignore  Cargo.toml  LICENSE  README-zh.md  README.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: auto-version.yml  ci.yml  release.yml
scripts/: README.md  install-7z-zstd.ps1  update-version.ps1
src/: lib.rs  main.rs
src/core/: mod.rs
src/core/applypatch/: apply.rs  bspatch.rs  bspatch_raw.rs  bspatch_streaming.rs  bspatch_zero.rs  cli.rs  imgdiff_format.rs  imgpatch.rs  mod.rs  types.rs  zlib_raw.rs
src/core/batch/: cli.rs  mod.rs
src/core/blockimg/: cli.rs  commands.rs  context.rs  hash_tree.rs  mod.rs  new_data_reader.rs  parallel_check.rs  resume.rs  stash.rs  sync_reader.rs  transfer_list.rs  update.rs  verify.rs
src/core/blockimg/ops/: diff_bsdiff.rs  diff_imgdiff.rs  hash_tree.rs  mod.rs  move_cmd.rs  new_cmd.rs  stash_free.rs  zero_erase.rs
src/core/edify/: cli.rs  functions.rs  mod.rs  parser.rs
src/core/super_img/: builder.rs  cli.rs  detector.rs  lp_metadata.rs  mod.rs  op_list.rs  reader.rs  sparse.rs  writer.rs
src/util/: hash.rs  io.rs  mod.rs  platform.rs  progress.rs  rangeset.rs  status.rs
