[package]
name = "imgpatchtools-rs"
version = "0.1.0"
edition = "2021"
authors = ["KawaiiSparkle"]
description = "Rust reimplementation of Android imgpatchtools"
license = "GPL-3.0"

[build]
jobs = 8

[profile.dev]
codegen-units = 16
opt-level = 3
debug = 1
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
anyhow      = "1"
thiserror   = "2"
clap        = { version = "4", features = ["derive"] }
flate2      = { version = "1", features = ["zlib"], default-features = false }
sha1        = "0.11"
sha2        = "0.11"
hex         = "0.4"
memmap2     = "0.9"
bzip2       = "0.6"
bzip2-sys   = "0.1"
brotli      = "8"
xz2         = "0.1"
byteorder   = "1"
indicatif   = "0.18"
log         = "0.4"
env_logger  = "0.11"
tempfile    = "3"
rayon       = "1"
regex       = "1"
libz-sys    = { version = "1", features = ["static"] }
lru         = "0.16"
crossbeam-queue = "0.3"

[target.'cfg(unix)'.dependencies]
libc        = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[dev-dependencies]
assert_cmd         = "2"
predicates         = "3"
pretty_assertions  = "1"
criterion          = { version = "0.8", features = ["html_reports"] }
