[package]
name = "imgpatchtools-rs"
version = "20260411.0.9"
edition = "2024"
authors = ["KawaiiSparkle"]
description = "Rust reimplementation of Android imgpatchtools"
license = "GPL-3.0"

[profile.dev]
codegen-units = 16
opt-level = 3
debug = 1
incremental = true

[profile.release]
opt-level = 3          # 最高优化级别
lto = "fat"            # 跨 crate 全链接时优化
codegen-units = 1      # 单代码生成单元，最大优化
strip = "symbols"      # 去除所有符号表
panic = "abort"        # panic 时直接 abort，不展开栈


[dependencies]
anyhow      = "1"
thiserror   = "2"
clap        = { version = "4", features = ["derive"] }
flate2      = { version = "1", features = ["zlib"], default-features = false }
sha1        = "0.11"
sha2        = "0.11"
hex         = "0.4"
memmap2     = "0.9"
bzip2       = { version = "0.6", features = ["static"] }
bzip2-sys   = "0.1"
brotli      = "8"
xz2         = { version = "0.1", features = ["static"] }
byteorder   = "1"
indicatif   = "0.18"
log         = "0.4"
env_logger  = "0.11"
tempfile    = "3"
rayon       = "1"
regex       = "1"
libz-sys    = { version = "1", features = ["static"] }
lru         = "0.16"
crossbeam-queue = "0.3"
crossbeam-channel = "0.5.15"

[target.'cfg(unix)'.dependencies]
libc        = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[dev-dependencies]
assert_cmd         = "2"
predicates         = "3"
pretty_assertions  = "1"
criterion          = { version = "0.8", features = ["html_reports"] }
